--- a/k8s/base/vets-service-deployment.yaml
+++ b/k8s/base/vets-service-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     kompose.cmd: kompose convert -f k8s/docker-compose.yml -o k8s/base
     kompose.image-pull-secret: regcred
-    kompose.service.expose: 34.200.1.13.nip.io
+    kompose.service.expose: petclinic.clarusway.us
     kompose.version: 1.22.0 (955b78124)
   creationTimestamp: null
   labels:
@@ -21,7 +21,7 @@ spec:
       annotations:
         kompose.cmd: kompose convert -f k8s/docker-compose.yml -o k8s/base
         kompose.image-pull-secret: regcred
-        kompose.service.expose: 34.200.1.13.nip.io
+        kompose.service.expose: petclinic.clarusway.us
         kompose.version: 1.22.0 (955b78124)
       creationTimestamp: null
       labels:
@@ -36,4 +36,9 @@ spec:
       imagePullSecrets:
         - name: regcred
       restartPolicy: Always
+      
+      initContainers:
+      - name: init-discovery-server
+        image: busybox
+        command: ['sh', '-c', 'until nc -z discovery-server:8761; do echo waiting for discovery-server; sleep 2; done;']
 status: {}
