--- a/k8s/base/api-gateway-ingress.yaml
+++ b/k8s/base/api-gateway-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     kompose.cmd: kompose convert -f k8s/docker-compose.yml -o k8s/base
     kompose.image-pull-secret: regcred
-    kompose.service.expose: 34.200.1.13.nip.io
+    kompose.service.expose: test.selimsan.com
     kompose.version: 1.22.0 (955b78124)
   creationTimestamp: null
   labels:
@@ -12,7 +12,7 @@ metadata:
   name: api-gateway
 spec:
   rules:
-    - host: 34.200.1.13.nip.io
+    - host: test.selimsan.com
       http:
         paths:
           - backend:
