--- a/k8s/base/vets-service-service.yaml
+++ b/k8s/base/vets-service-service.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     kompose.cmd: kompose convert -f k8s/docker-compose.yml -o k8s/base
     kompose.image-pull-secret: regcred
-    kompose.service.expose: 34.200.1.13.nip.io
+    kompose.service.expose: petclinic.selimsan.com
     kompose.version: 1.22.0 (955b78124)
   creationTimestamp: null
   labels:
